--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,15 +1,14 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-body{
+
+body {
     font-family: 'Poppins', sans-serif;
 }
 
 /* Navigation bar */
-
-/* Basic styling for navigation */
 ul.nav-menu {
     list-style: none;
     display: flex;
@@ -18,12 +17,10 @@ ul.nav-menu {
     justify-content: right;
 }
 
-/* Styling for each menu item */
 ul.nav-menu li {
     margin-right: 15px;
 }
 
-/* Styling for links within the menu */
 ul.nav-menu li a {
     text-decoration: none;
     color: #fff;
@@ -31,13 +28,11 @@ ul.nav-menu li a {
     transition: background-color 0.3s ease;
 }
 
-/* Change link color on hover */
 ul.nav-menu li a:hover {
     background-color: #4e0707;
 }
 
 /* Name content */
-
 .banner-container {
     position: relative;
     width: 100%;
@@ -49,7 +44,6 @@ ul.nav-menu li a:hover {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    image-rendering: optimizeQuality; 
 }
 
 .text-container {
@@ -58,7 +52,7 @@ ul.nav-menu li a:hover {
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
-    color: #fff; /* Text color for better contrast */
+    color: #fff;
     font-family: 'Arial', sans-serif;
 }
 
@@ -67,55 +61,36 @@ h1 {
     margin: 0;
 }
 
-/* This is for the main content */
-
-/* This is for About me */
+/* Main content */
 .header-container {
     text-align: center;
 }
 
 .header1 {
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     color: #483c32;
     padding: 50px;
     text-transform: uppercase;
     margin: 5px;
-    margin-left: 120px;
-    font-size: 1.75em;
+    /* margin-left: 120px; */
+    font-size: 1.75rem;
     letter-spacing: 2px;
 }
-
-/* This is boxes for profile image and boxex */
-
-.info_AboutMe{
-    width: 100%;
-    /* height: 300px; */
-    /* border: 4px solid red; */
-    /* border-radius: 10px; */
-    margin-top: 10px;
+.main-info{
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    /* width: 50vh; */
+    height: 60vh;
+    padding-left: 15vmin;
 }
-.imgAboutMe{
-    height: 350px;
-
-}
-.imgAboutMe img{
-    max-width: 100%;
-    max-height: 100%;
+.main-info img{
+    width: auto;
+    height: auto;
+    object-fit: fill; 
     display: block;
     border-radius: 50%;
 }
-.contentAboutMe{
-    width: 47.5%;
-    height: 400px;   
-    margin-left: 15%;
-    border-radius: 10px;
-    margin-right: 8%;
-    line-height: 1.5;
-}
-div{
- 
-    border: 4px solid red;   
+.content{
+    padding-left: 20vmin;
+    padding-right: 20vmin;
+    
 }
